<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/sp_mini_time_blue">


        <Button
            android:id="@+id/cancel_timer_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:textColor="@android:color/white"
            android:text="取消"/>

        <Button
            android:id="@+id/confirm_timer_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="确定"
            android:background="#00000000"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="30dp"
        android:background="@drawable/line_long" />

    <RelativeLayout
        android:id="@+id/select_time_type_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/list_item_white_selector" >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/task"
            android:textColor="@color/eair_text_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/time_type_text"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/period_task"
            android:textColor="@color/eair_text_gray"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@drawable/line_long" />

    <LinearLayout
        android:id="@+id/period_task_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/period_start_time_layout"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/list_item_white_selector" >

        <TextView
                android:id="@+id/switch_on"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/switch_on"
                android:textColor="@color/eair_text_black"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/start_time_text"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/switch_on"
                android:gravity="center"
                android:text="09:12"
                android:textColor="@color/eair_text_gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/period_on_time_enable_button"
                android:layout_width="65dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/switch_on" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/line_long" />

        <RelativeLayout
            android:id="@+id/period_end_time_layout"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/list_item_white_selector" >

        <TextView
                android:id="@+id/switch_off"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/switch_off"
                android:textColor="@color/eair_text_black"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/end_time_text"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/switch_off"
                android:gravity="center"
                android:text="09:12"
                android:textColor="@color/eair_text_gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/period_off_time_enable_button"
                android:layout_width="65dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/switch_off" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@drawable/line_long" />

        <RelativeLayout
            android:id="@+id/select_week_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_white_selector"
            android:minHeight="45dp" >

        <TextView
                android:id="@+id/repeat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/repeat"
                android:textColor="@color/eair_text_black"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/weeks"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@+id/repeat_text"
                android:gravity="center_vertical"
                android:text="@string/run_one_time"
                android:textColor="@color/eair_text_gray"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/arrow_small_right" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@drawable/line_long" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timer_task_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/timer_on_layout"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/list_item_white_selector" >

        <TextView
                android:id="@+id/time_switch_on"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/switch_on"
                android:textColor="@color/eair_text_black"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/timer_on_time_year"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/time_switch_on"
                android:gravity="center"
                android:text="2014-01-01"
                android:textColor="@color/eair_text_gray"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/timer_on_time_text"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/timer_on_time_year"
                android:gravity="center"
                android:text="09:12"
                android:textColor="@color/eair_text_gray"
                android:textSize="16sp" />

        <Button
                android:id="@+id/timer_on_time_enable_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/switch_on" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@drawable/line_long" />

        <RelativeLayout
            android:id="@+id/timer_off_layout"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/list_item_white_selector" >

        <TextView
                android:id="@+id/time_switch_off"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/switch_off"
                android:textColor="@color/eair_text_black"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/timer_off_time_year"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/time_switch_off"
                android:gravity="center"
                android:text="2014-01-01"
                android:textColor="@color/eair_text_gray"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/timer_off_time_text"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/timer_off_time_year"
                android:gravity="center"
                android:text="09:12"
                android:textColor="@color/eair_text_gray"
                android:textSize="16sp" />

        <Button
                android:id="@+id/timer_off_time_enable_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/switch_on" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@drawable/line_long" />
    </LinearLayout>

</LinearLayout>